/*
 * Designed and developed by 2024 mshdabiola (lawal abiola)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.mshdabiola.model.testtag

object SelectTrashAppBarTestTags {
    const val ROOT_APP_BAR = "selecttrashappbar:root"
    const val CLEAR_SELECTION_BUTTON = "selecttrashappbar:clear_selection_button"
    const val TITLE_TEXT = "selecttrashappbar:title_text"
    const val RESTORE_BUTTON = "selecttrashappbar:restore_button"
    const val MORE_OPTIONS_BUTTON = "selecttrashappbar:more_options_button"
    const val TRASH_OPTIONS_DROPDOWN = "selecttrashappbar:trash_options_dropdown"
    const val DELETE_FOREVER_MENU_ITEM = "selecttrashappbar:delete_forever_menu_item"
}
