...
 */
package com.mshdabiola.model.testtag

object FaqScreenTestTags {
    const val SCREEN_ROOT = "faq:screen_root"
    const val EMPTY_STATE_TEXT = "faq:empty_state_text"
    const val FAQ_LIST = "faq:faq_list"

    object FaqListItemTestTags {
        const val LIST_ITEM_ROOT_PREFIX = "faq_item:root_"
        const val QUESTION_TEXT_PREFIX = "faq_item:question_"
        const val EXPAND_ICON_PREFIX = "faq_item:expand_icon_"
        const val ANSWER_TEXT_PREFIX = "faq_item:answer_"
...
